--- a/css/styles.css
+++ b/css/styles.css
@@ -5,21 +5,61 @@ body {
 
 section {
   display: flex;
+  width: 100%;
 }
 section.cover {
   height: calc(100vh - 100px);
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  background: linear-gradient(60deg, rgba(189, 126, 31, 0.81), rgba(144, 65, 18, 0.72)), url(../img/cover.jpg) no-repeat center center fixed;
+  background: linear-gradient(60deg, rgba(189, 82, 31, 0.81), rgba(101, 53, 24, 0.72)), url(../img/cover.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  color: white;
 }
-@media (max-width: 400px) {
-  section.cover {
-    background: black;
-  }
+section.cover .header {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 60px;
+  margin-top: 30px;
+}
+section.cover .header .logo {
+  height: 40px;
+  margin-left: 30px;
+}
+section.cover .header .nav-bar {
+  display: flex;
+  margin-right: 40px;
+  align-items: center;
+}
+section.cover .header .nav-bar a {
+  font-size: 17px;
+  color: #cecaca;
+  text-decoration: none;
+  margin-right: 30px;
+}
+section.cover .header .nav-bar a.active {
+  font-weight: bold;
+  color: white;
+}
+section.cover .title {
+  font-size: 40px;
+  font-weight: bold;
+}
+section.cover .see-more {
+  display: flex;
+  height: 100px;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+}
+section.cover .see-more a {
+  text-decoration: none;
+  color: white;
+  font-size: 50px;
 }
 
 /*# sourceMappingURL=styles.css.map */
