--- a/css/styles.scss
+++ b/css/styles.scss
@@ -10,13 +10,57 @@ section {
   width: 100%;
   &.cover {
     height: calc(100vh - 100px);
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    background: linear-gradient(60deg, rgba(189, 126, 31, 0.81), rgba(144, 65, 18, 0.72)), url(../img/cover.jpg) no-repeat center center fixed;
+    background: linear-gradient(60deg, rgba(189, 82, 31, 0.81), rgba(101, 53, 24, 0.72)), url(../img/cover.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    color: white;
+    .header {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      height: 60px;
+      margin-top: 30px;
+      .logo {
+        height: 40px;
+        margin-left: 30px;
+      }
+      .nav-bar {
+        display: flex;
+        margin-right: 40px;
+        align-items: center;
+        a {
+          font-size: 17px;
+          color: #cecaca;
+          text-decoration: none;
+          margin-right: 30px;
+          &.active {
+            font-weight: bold;
+            color: white;
+          }
+        }
+      }
+    }
+    .title {
+      font-size: 40px;
+      font-weight: bold;
+    }
+    .see-more {
+      display: flex;
+      height: 100px;
+      justify-content: center;
+      align-items: flex-start;
+      width: 100%;
+      a {
+        text-decoration: none;
+        color: white;
+        font-size: 50px;
+      }
+    }
   }
 }
 
