--- a/css/styles.css
+++ b/css/styles.css
@@ -21,9 +21,9 @@ section.cover {
 }
 section.cover .header {
   display: flex;
-  justify-content: space-between;
   width: 100%;
   height: 60px;
+  justify-content: space-between;
   margin-top: 30px;
 }
 section.cover .header .logo {
@@ -51,15 +51,44 @@ section.cover .title {
 }
 section.cover .see-more {
   display: flex;
-  height: 100px;
   justify-content: center;
   align-items: flex-start;
+  height: 100px;
   width: 100%;
 }
 section.cover .see-more a {
   text-decoration: none;
   color: white;
   font-size: 50px;
+}
+section.content {
+  background: white;
+}
+section.content .left {
+  display: flex;
+  justify-content: center;
+  width: 40%;
+  padding-top: 40px;
+}
+section.content .left span {
+  font-size: 30px;
+  font-weight: bold;
+}
+section.content .right {
+  width: 60%;
+  padding-top: 40px;
+  padding-right: 54px;
+}
+section.content .right p {
+  margin-top: 0;
+  margin-bottom: 20px;
+  color: #5d5b5b;
+  word-spacing: 5px;
+  line-height: 1.6;
+  font-weight: lighter;
+}
+section.content.what-we-do {
+  height: 400px;
 }
 
 /*# sourceMappingURL=styles.css.map */
