--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,13 @@
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
 }
 
 section {
-  display: flex;
   width: 100%;
+  display: flex;
 }
+
 section.cover {
   height: calc(100vh - 100px);
   flex-direction: column;
@@ -19,67 +20,96 @@ section.cover {
   background-size: cover;
   color: white;
 }
+
 section.cover .header {
-  display: flex;
   width: 100%;
   height: 60px;
+  display: flex;
   justify-content: space-between;
   margin-top: 30px;
 }
+
 section.cover .header .logo {
   height: 40px;
   margin-left: 30px;
 }
+
 section.cover .header .nav-bar {
   display: flex;
   margin-right: 40px;
   align-items: center;
 }
+
 section.cover .header .nav-bar a {
   font-size: 17px;
   color: #cecaca;
   text-decoration: none;
   margin-right: 30px;
 }
+
 section.cover .header .nav-bar a.active {
   font-weight: bold;
   color: white;
 }
+
 section.cover .title {
   font-size: 40px;
   font-weight: bold;
 }
+
 section.cover .see-more {
+  height: 100px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  height: 100px;
-  width: 100%;
 }
+
 section.cover .see-more a {
   text-decoration: none;
   color: white;
   font-size: 50px;
 }
+
 section.content {
+  width: calc(100% - 350px);
+  flex-direction: column;
   background: white;
+  padding-left: 250px;
+  padding-right: 100px;
 }
-section.content .left {
+
+section.content .content-section {
   display: flex;
-  justify-content: center;
-  width: 40%;
+  flex-direction: row;
+  width: 100%;
+}
+
+section.content .content-section .left {
+  width: 250px;
+  display: flex;
   padding-top: 40px;
 }
-section.content .left span {
+
+section.content .content-section .left span {
+  width: 100%;
   font-size: 30px;
   font-weight: bold;
+  padding-right: 70px;
 }
-section.content .right {
-  width: 60%;
+
+section.content .content-section .right {
+  width: calc(100% - 250px);
   padding-top: 40px;
-  padding-right: 54px;
+  /** 
+        * what we do
+        */
+  /** 
+        * explore opportunities
+        */
 }
-section.content .right p {
+
+section.content .content-section .right p {
   margin-top: 0;
   margin-bottom: 20px;
   color: #5d5b5b;
@@ -87,8 +117,89 @@ section.content .right p {
   line-height: 1.6;
   font-weight: lighter;
 }
-section.content.what-we-do {
+
+section.content .content-section .right .card {
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 30px;
+  margin-bottom: 30px;
+  -webkit-box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.09);
+  -moz-box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.09);
+  box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.09);
+}
+
+section.content .content-section .right .card .card-content {
+  display: flex;
+  flex-direction: column;
+}
+
+section.content .content-section .right .card .card-content .main-info {
+  font-size: 22px;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+
+section.content .content-section .right .card .card-content .secondary-info {
+  color: #5d5b5b;
+  font-weight: lighter;
+}
+
+section.content .content-section .right .card .card-action a {
+  height: 48px;
+  width: 130px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fd7314;
+  text-decoration: none;
+  color: white;
+  border-radius: 5px;
+  font-size: 19px;
+}
+
+section.content .content-section.what-we-do {
   height: 400px;
 }
 
+section.content .content-section.explore-opportunities {
+  min-height: 400px;
+  padding-bottom: 50px;
+  border-bottom: 1px solid #ececec;
+}
+
+section.content .footer {
+  width: 100%;
+  height: 90px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 50px;
+  color: #5d5b5b;
+  font-size: 17px;
+  font-weight: lighter;
+}
+
+section.content .footer .social-media {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+section.content .footer .social-media a {
+  text-decoration: none;
+  color: #5d5b5b;
+  margin-right: 10px;
+  font-size: 30px;
+}
+
+section.content .footer .social-media a:first-child {
+  margin-left: 10px;
+}
+
+section.content .footer .social-media a:last-child {
+  margin-right: 0;
+}
 /*# sourceMappingURL=styles.css.map */
