smooth see more

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ section.content {
   background: white;
   padding-left: 250px;
   padding-right: 100px;
+  margin-top: 100px;
 }
 
 section.content .content-section {
