--- a/css/styles.scss
+++ b/css/styles.scss
@@ -75,6 +75,7 @@ section {
     background: white;
     padding-left: 250px;
     padding-right: 100px;
+    margin-top: 100px;
     .content-section {
       display: flex;
       flex-direction: row;
