--- a/css/styles.scss
+++ b/css/styles.scss
@@ -31,10 +31,19 @@ section {
       height: 60px;
       display: flex;
       justify-content: space-between;
+      align-items: center;
       margin-top: 30px;
+      @media only screen and (max-width: 500px) {
+        font-size: 30px;
+        height: 40px;
+      }
       .logo {
         height: 40px;
         margin-left: 30px;
+        @media only screen and (max-width: 500px) {
+          margin-left: 20px;
+          height: 30px;
+        }
       }
       .nav-bar {
         display: flex;
@@ -45,6 +54,21 @@ section {
           color: #cecaca;
           text-decoration: none;
           margin-right: 30px;
+          @media only screen and (max-width: 500px) {
+            margin-right: 10px;
+          }
+          &.link-mobile{
+            display: none;
+          }
+          @media only screen and (max-width: 500px) {
+            &.link{
+              display: none;
+            }
+            &.link-mobile{
+              display: flex;
+              font-size: 20px;
+            }
+          }
           &.active {
             font-weight: bold;
             color: white;
@@ -55,6 +79,11 @@ section {
     .title {
       font-size: 40px;
       font-weight: bold;
+      text-align: center;
+      padding: 0 20px;
+      @media only screen and (max-width: 500px) {
+        font-size: 30px;
+      }
     }
     .see-more {
       height: 100px;
@@ -62,38 +91,87 @@ section {
       display: flex;
       justify-content: center;
       align-items: flex-start;
+      @media only screen and (max-width: 500px) {
+        height: 50px;
+      }
       a {
         text-decoration: none;
         color: white;
         font-size: 50px;
+        @media only screen and (max-width: 500px) {
+          font-size: 30px;
+        }
       }
     }
   }
   &.content {
-    width: calc(100% - 350px);
+    width: calc(100% - 300px);
     flex-direction: column;
     background: white;
-    padding-left: 250px;
+    padding-left: 200px;
     padding-right: 100px;
     margin-top: 100px;
+
+    @media only screen and (max-width: 1200px) {
+      width: calc(100% - 180px);
+      padding-left: 90px;
+      padding-right: 90px;
+    }
+
+    @media only screen and (max-width: 1000px) {
+      width: calc(100% - 200px);
+      padding-left: 100px;
+      padding-right: 100px;
+    }
+
+    @media only screen and (max-width: 850px) {
+      width: calc(100% - 100px);
+      padding-left: 50px;
+      padding-right: 50px;
+    }
+
+    @media only screen and (max-width: 700px) {
+      width: calc(100% - 40px);
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
     .content-section {
       display: flex;
       flex-direction: row;
       width: 100%;
+      @media only screen and (max-width: 850px) {
+        flex-direction: column;
+      }
       .left {
         width: 250px;
         display: flex;
         padding-top: 40px;
+        @media only screen and (max-width: 850px) {
+          width: 100%;
+          align-items: center;
+          justify-content: center;
+        }
+        @media only screen and (max-width: 500px) {
+          width: 100%;
+        }
         span {
           width: 100%;
           font-size: 30px;
           font-weight: bold;
           padding-right: 70px;
+          @media only screen and (max-width: 850px) {
+            font-size: 25px;
+            padding-right: 0;
+          }
         }
       }
       .right {
         width: calc(100% - 250px);
         padding-top: 40px;
+        @media only screen and (max-width: 850px) {
+          width: 100%;
+        }
         p {
           margin-top: 0;
           margin-bottom: 20px;
@@ -103,16 +181,21 @@ section {
           font-weight: lighter;
         }
         .card {
-          height: 100px;
           display: flex;
           flex-direction: row;
           align-items: center;
           justify-content: space-between;
-          padding: 0 30px;
+          padding: 30px;
           margin-bottom: 30px;
           -webkit-box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.09);
           -moz-box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.09);
           box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.09);
+          @media only screen and (max-width: 850px) {
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            padding: 20px;
+          }
           .card-content {
             display: flex;
             flex-direction: column;
@@ -120,16 +203,22 @@ section {
               font-size: 22px;
               font-weight: 500;
               margin-bottom: 5px;
+              @media only screen and (max-width: 850px) {
+                margin-bottom: 1px;
+              }
             }
             .secondary-info {
               color: $gray-text-color;
               font-weight: lighter;
             }
+            @media only screen and (max-width: 850px) {
+              margin-bottom: 10px;
+            }
           }
           .card-action {
             a {
-              height: 48px;
-              width: 130px;
+              height: 38px;
+              width: 150px;
               display: flex;
               justify-content: center;
               align-items: center;
@@ -137,13 +226,16 @@ section {
               text-decoration: none;
               color: white;
               border-radius: 5px;
-              font-size: 19px;
+              font-size: 15px;
             }
           }
         }
       }
       &.what-we-do {
-        height: 400px;
+        min-height: 400px;
+        @media only screen and (max-width: 850px) {
+          min-height: 400px;
+        }
       }
       &.explore-opportunities {
         min-height: 400px;
@@ -161,7 +253,25 @@ section {
       color: $gray-text-color;
       font-size: 17px;
       font-weight: lighter;
+      text-align: center;
+      .for-mobile {
+        display: none;
+      }
+      @media only screen and (max-width: 960px) {
+        flex-direction: column;
+        justify-content: flex-start;
+        margin-top: 20px;
+        .for-mobile {
+          display: block;
+        }
+        .for-desktop {
+          display: none;
+        }
+      }
       .social-media {
+        @media only screen and (max-width: 960px) {
+          display: none;
+        }
         display: flex;
         justify-content: flex-end;
         align-items: center;
